--- a/RobotView/RobotView.csproj
+++ b/RobotView/RobotView.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnyRobot_U.cs" />
+    <Compile Include="ControllerUI.cs" />
     <Compile Include="MessageFromBotServer.cs" />
     <Compile Include="Path_U.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
